--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.2.0",
     "tw-elements": "^1.0.0-beta3",
     "web-vitals": "^2.1.4"
   },
